# SaveTheTurtles

./: README.md  buildAndRunGame.sh  buildAndRunIMOVE.sh  buildAndRunTests.sh  buildIMOVE.sh  codeCoverage_CI.sh  generateCodeCoverage.sh
IMOVE/: build.sh  calibrate.sh
IMOVE/config/: NiceConfig.yml  aula31.yml  test.yml
IMOVE/imove/src/: CMakeLists.txt
IMOVE/imove_peopleextractor/src/: ImovePeopleextractorManager.cpp
IMOVE/imove_scene/src/: CMakeLists.txt  ImoveSceneManager.cpp  ImoveSceneManager.hpp  main.cpp
IMOVE/imove_scene/src/Scene/: Action.h  Condition.h  Effect.h  Scene.cpp  Scene.h  SceneConfiguration.cpp  SceneConfiguration.h
IMOVE/util/src/: OpenCVUtil.hpp
game/: CMakeLists.txt
game/src/: CMakeLists.txt  Main.cpp  Main.h
game/src/cmake_modules/: FindSFML.cmake
game/src/control/: GameManager.cpp  GameManager.h  ObstacleManager.cpp  ObstacleManager.h  PlayerManager.cpp  PlayerManager.h  TurtleManager.cpp  TurtleManager.h
game/src/control/gameStates/: GameFinishedState.cpp  GameFinishedState.h  GameIdleState.cpp  GameIdleState.h  GameResetState.cpp  GameResetState.h  GameRunningState.cpp  GameRunningState.h  GameStartState.cpp  GameStartState.h
game/src/gameEntities/: Entity.h  ObjectiveArea.cpp  ObjectiveArea.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  StartingArea.cpp  StartingArea.h  Trail.cpp  Trail.h  TrailPoint.cpp  TrailPoint.h
game/src/gameEntities/turtle/: Turtle.cpp  Turtle.h
game/src/gameEntities/turtle/turtleStates/: TurtleIdleState.cpp  TurtleIdleState.h  TurtleObjectiveState.cpp  TurtleObjectiveState.h  TurtleReturningState.cpp  TurtleReturningState.h  TurtleRoamingState.cpp  TurtleRoamingState.h  TurtleSpawnState.cpp  TurtleSpawnState.h  TurtleState.h  TurtleWalkState.cpp  TurtleWalkState.h
game/src/rendering/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AnimationData.cpp  AnimationData.h  AnimationHandler.cpp  AnimationHandler.h  AssetFactory.cpp  AssetFactory.h  AssetLoader.cpp  AssetLoader.h  RenderWrapper.cpp  RenderWrapper.h
game/src/storage/: HitBox.cpp  HitBox.h  InputData.cpp  InputData.h  Variables.cpp  Variables.h
game/src/utility/: BasicState.h  CollisionHandler.cpp  CollisionHandler.h  MathUtilities.cpp  MathUtilities.h
game/testing/: CMakeLists.txt
game/testing/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-matchers.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-spec-builders.h
game/testing/googletest/googlemock/include/gmock/internal/: gmock-internal-utils.h
game/testing/googletest/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h.pump
game/testing/googletest/googlemock/scripts/: gmock_doctor.py  upload.py
game/testing/googletest/googlemock/src/: gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
game/testing/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_stress_test.cc
game/testing/googletest/googletest/samples/: sample10_unittest.cc  sample9_unittest.cc
game/testing/googletest/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
game/testing/googletest/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test_test.cc  gtest_catch_exceptions_test_.cc  gtest_environment_test.cc  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_shuffle_test.py  gtest_unittest.cc  gtest_xml_output_unittest_.cc
game/testing/test-src/: testMain.cpp
game/testing/test-src/description-based-tests/: RenderWindowTest.cpp  RenderWrapper Test Cases.md  Userstory Test Cases.md
game/testing/test-src/feature-tests/: UserStory1.cpp  UserStory10.md  UserStory11.md  UserStory12.md  UserStory13.md  UserStory14.md  UserStory15.md  UserStory16.md  UserStory2.cpp  UserStory3.md  UserStory4.md  UserStory5.cpp  UserStory6.cpp  UserStory7.md  UserStory8.md  UserStory9.md  Userstories.md
game/testing/test-src/unit-tests/control/: GameManagerTest.cpp  PlayerManagerTest.cpp  TurtleManagerTest.cpp
game/testing/test-src/unit-tests/control/gameStates/: GameFinishedStateTest.cpp  GameIdleStateTest.cpp  GameResetStateTest.cpp  GameRunningStateTest.cpp  GameStartStateTest.cpp
game/testing/test-src/unit-tests/gameEntities/: ObjectiveAreaTest.cpp  ObstacleTest.cpp  PlayerTest.cpp  StartingAreaTest.cpp  TrailPointTest.cpp  TrailTest.cpp
game/testing/test-src/unit-tests/gameEntities/turtle/: TurtleTest.cpp
game/testing/test-src/unit-tests/gameEntities/turtle/turtleStates/: TurtleIdleStateTest.cpp  TurtleObjectiveStateTest.cpp  TurtleReturningStateTest.cpp  TurtleRoamingStateTest.cpp  TurtleSpawnStateTest.cpp  TurtleWalkStateTest.cpp
game/testing/test-src/unit-tests/rendering/: AnimationDataTest.cpp
game/testing/test-src/unit-tests/storage/: HitBoxTest.cpp  InputDataTest.cpp  VariablesTest.cpp
game/testing/test-src/unit-tests/utility/: AssetLoaderTest.cpp  CollisionHandlerTest.cpp  MathUtilitiesTest.cpp
static-analysis/: CppCheckSuppression.txt  Supression Justifications.md  runCppCheck.sh
(+16 files in other folders)
